--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @font-face {
   font-family: "roag-light";
   src: url(font/Roag-Light.otf);
@@ -85,6 +84,9 @@
 .hero-bottom {
   display: flex;
   flex-direction: row;
+  align-items: flex-end;
+  gap: 20px;
+  margin-top: auto;
 }
 
 #hero-button {
@@ -93,12 +95,14 @@
   font-size: 12px;
   font-family: "roag-bold";
   color: white;
-  width: 100px;
-  height: 23px;
+  padding: 5px 20px;
   border-radius: 20px;
   text-align: center;
-  padding: 1px;
   background-color: rgb(255, 2, 2);
+}
+
+#hero-button:hover {
+  cursor: pointer;
 }
 
 .doodle #arrow {
@@ -177,9 +181,35 @@
     color: rgb(255, 2, 2);
     background-color: rgb(254, 223, 228);
   }
+
   .footer-logos {
     flex-direction: row;
     justify-content: center;
     gap: 60px;
+  }
+
+  /* -------------Test------------- */
+  #hero-button::after,
+  #hero-button::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, #ff0000, #00ffff);
+    bottom: -5px;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.4s ease-out;
+  }
+
+  #hero-button::before {
+    top: -5px;
+    transform-origin: left;
+  }
+
+  #hero-button:hover::after,
+  #hero-button:hover::before {
+    transform: scaleX(1);
   }
 }
